chore: Avoid text overflow

--- a/css/online.css
+++ b/css/online.css
@@ -1,5 +1,5 @@
 .w-online-dialog .modal-dialog {width: 290px;}
-.w-online-dialog-ctn h5 {padding: 5px 0; margin: 0;}
+.w-online-dialog-ctn h5 {padding: 5px 0; margin: 0; text-overflow: ellipsis; max-width: 100%; white-space: nowrap; overflow: hidden;}
 .w-switch-to-server {white-space: nowrap; padding-bottom: 5px;}
 .w-switch-to-server input {border: 1px solid #ccc; padding: 0 5px; height: 26px; border-radius: 2px;}
 .w-switch-to-server .w-ip {width: 168px;}
